<resources>
    <!--App Name-->
    <string name="app_name">Personnel Double Service</string>

    <!--Data-->
    <string name="data_format">.data</string>
    <string name="groups_folder">groups/</string>
    <string name="events_file">events.data</string>
    <string name="contact_groups">contact_groups.data</string>
    <string name="archived_events">archived_events.data</string>
    <string name="custom_folder">custom/</string>
    <string name="messages_file">messages</string>
    <string name="custom_messages_file">custom_messages.data</string>
    <string name="messages_folder">messages/</string>

    <!--Titles-->
    <string name="events">events</string>
    <string name="groups">groups</string>

    <!--Menus-->
    <string name="closed_events">Archive</string>
    <string name="custom_messages">Custom Messages</string>

    <!--Event stuff-->
    <string name="event_name">Event name</string>
    <string name="event_description">Event description</string>
    <string name="add">Add</string>
    <string name="end_time">End Time:</string>
    <string name="start_time">Start Time:</string>
    <string name="number_of_workers">Number of workers:</string>

    <!--Warnings/Messages-->
    <string name="title_waring">Event must have a title</string>
    <string name="change_name">Change Name</string>
    <string name="remove_group">Remove Group</string>
    <string name="edit_event">Edit Event</string>
    <string name="delete_event">Delete Event</string>
    <string name="finish_event">Finish Event</string>
    <string name="delete_message_event">Are you sure that you want to delete this event?</string>
    <string name="finish_message">Finish the event and store it into archive?</string>
    <string name="delete_message_group">Are you sure that you want to delete this group?</string>
    <string name="name_in_use_message">Name already in use</string>
    <string name="confirmation_edit_text_message">Press here to write</string>
    <string name="confirmation_send_message">Message will be sent at designated date</string>
    <string name="message_contact_abssent_in_group">The contact doesn\'t appear in any contacts group</string>
    <string name="message_remove_contact">Remove contact from group</string>
    <string name="message_name_must_not_be_empty">Name must not be empty</string>
    <string name="message_workers_count_1"> workers out of </string>
    <string name="message_workers_count_2"> have registered for the event.</string>
    <string name="message_workers_count_3"> workers </string>
    <string name="message_event_confirmation_1">out of</string>
    <string name="message_event_confirmation_2">have confirmed their attendance.</string>
    <string name="message_group_status_sending">The confirmation will be send shortly</string>
    <string name="message_group_status_sent">Waiting for confirmation from the workers</string>
    <string name="message_group_status_cancel">Confirmation message was canceled</string>
    <string name="message_group_status_done">All workers confirmed their attendance</string>
    <string name="sending_messages">sending_messages</string>
    <string name="message_sent_shortly">Message will be sent shortly</string>
    <string name="notification_title_failed_send_message">Failed to send message</string>
    <string name="notification_message_failed_send_message">The app failed to send a message 100 times</string>
    <string name="outgoing_messages">Outgoing Messages</string>
    <string name="message_must_not_be_empty">Message must not be empty</string>
    <string name="enter_password">Please enter password:</string>
    <string name="message_trial">Trial is enabled for 1 hour</string>
    <string name="message_wrong_pass">Wrong password try again</string>
    <string name="message_correct_password">The password is correct</string>
    <string name="copy_group">Сopy Group</string>

    <!--Other-->
    <string name="yes">Yes</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="contacts_group">*Contacts</string>
    <string name="set">Set</string>
    <string name="reminder_messages">Reminder Messages</string>
    <string name="reminders">Reminders</string>
    <string name="reset">reset</string>
    <string name="send">send</string>
    <string name="resend">resend</string>
    <string name="message">Message</string>
    <string name="messages">Messages</string>
    <string name="add_to">Add to</string>
    <string name="contact_group">Contact group</string>
    <string name="event_group">Event group</string>
    <string name="confirm">confirm</string>
    <string name="trial">Trial</string>
    <string name="clear">Clear Messages</string>
    <string name="group_name">Group Name</string>


    <!--Days-->
    <string name="yesterday">Yesterday</string>
    <string name="day1">Sunday</string>
    <string name="day2">Monday</string>
    <string name="day3">Tuesday</string>
    <string name="day4">Wednesday</string>
    <string name="day5">Thursday</string>
    <string name="day6">Friday</string>
    <string name="day7">Saturday</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="in_two_days" />
    <string name="people">people</string>
    <string name="person">one person</string>
    <string name="message_ntf_msgr_1">You have</string>
    <string name="message_ntf_msgr_2">new messages from</string>
    <string name="message_ntf_msgr_3">new messages</string>
    <string name="write_your_message">Write your message</string>
    <string name="send_at">Send at:</string>
    <string name="immediately">Immediately</string>
    <string name="remind_to_confirm_every">Remind to confirm every</string>
    <string name="hours">hours</string>
    <string name="the_messsage">Attendance message</string>
    <string name="the_group">The Group</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirmed">Confirmed</string>

</resources>
